welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:3: error: value or is not a member of Boolean
	while(estSurBiscuit()==false or estDosMur()==false){
                                     ^